@@ -3,11 +3,11 @@ package org.egov.ewst.util;
 import static java.util.Objects.isNull;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.ewst.config.EwasteConfiguration;
@@ -22,7 +22,6 @@ import org.egov.mdms.model.MdmsCriteria;
 import org.egov.mdms.model.MdmsCriteriaReq;
 import org.egov.mdms.model.ModuleDetail;
 import org.egov.tracer.model.CustomException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.util.CollectionUtils;
 
 import com.fasterxml.jackson.databind.JsonNode;
@@ -35,34 +34,35 @@ import lombok.Getter;
 @Getter
 public class CommonUtils {
 
-	@Autowired
-	private ObjectMapper mapper;
+	private final ObjectMapper mapper;
+	private final EwasteConfiguration configs;
+	private final ServiceRequestRepository restRepo;
 
-	@Autowired
-	private EwasteConfiguration configs;
-
-	@Autowired
-	private ServiceRequestRepository restRepo;
+	protected CommonUtils(ObjectMapper mapper, EwasteConfiguration configs, ServiceRequestRepository restRepo) {
+		this.mapper = mapper;
+		this.configs = configs;
+		this.restRepo = restRepo;
+	}
 
 	/**
 	 * Method to return auditDetails for create/update flows
 	 *
-	 * @param by
-	 * @param isCreate
+	 * @param by       user identifier performing the action
+	 * @param isCreate whether the audit details are for a create flow
 	 * @return AuditDetails
 	 */
 	public AuditDetails getAuditDetails(String by, Boolean isCreate) {
 
 		Long time = System.currentTimeMillis();
 
-		if (isCreate)
+		if (Boolean.TRUE.equals(isCreate))
 			return AuditDetails.builder().createdBy(by).lastModifiedBy(by).createdTime(time).lastModifiedTime(time)
 					.build();
 		else
 			return AuditDetails.builder().lastModifiedBy(by).lastModifiedTime(time).build();
 	}
 
-	/**************************** ID GEN ****************************/
+	/* **************************** ID GEN **************************** */
 
 	/**
 	 * Returns a list of numbers generated from idgen
@@ -93,17 +93,20 @@ public class CommonUtils {
 		if (CollectionUtils.isEmpty(idResponses))
 			throw new CustomException("IDGEN ERROR", "No ids returned from idgen Service");
 
-		return idResponses.stream().map(IdResponse::getId).collect(Collectors.toList());
+		return idResponses.stream().map(IdResponse::getId).toList();
 	}
 
-	/*********************** MDMS Utitlity Methods *****************************/
+	/* *********************** MDMS Utitlity Methods ***************************** */
 
 	/**
 	 * Fetches all the values of particular attribute as map of fieldname to list
 	 *
 	 * @param tenantId    tenantId from ewaste request
+	 * @param moduleName  MDMS module name to query
 	 * @param names       List of String containing the names of all masterdata
 	 *                    whose code has to be extracted
+	 * @param filter      filter expression for master data
+	 * @param jsonpath    json path to extract values from MDMS response
 	 * @param requestInfo RequestInfo of the received Ewaste request
 	 * @return Map of MasterData name to the list of code in the MasterData
 	 *
@@ -124,7 +127,7 @@ public class CommonUtils {
 					ErrorConstants.INVALID_TENANT_ID_MDMS_MSG);
 		}
 
-		return null;
+		return Collections.emptyMap();
 	}
 
 	public MdmsCriteriaReq prepareMdMsRequest(String tenantId, String moduleName, List<String> names, String filter,
@@ -132,9 +135,7 @@ public class CommonUtils {
 
 		List<MasterDetail> masterDetails = new ArrayList<>();
 
-		names.forEach(name -> {
-			masterDetails.add(MasterDetail.builder().name(name).filter(filter).build());
-		});
+		names.forEach(name -> masterDetails.add(MasterDetail.builder().name(name).filter(filter).build()));
 
 		ModuleDetail moduleDetail = ModuleDetail.builder().moduleName(moduleName).masterDetails(masterDetails).build();
 		List<ModuleDetail> moduleDetails = new ArrayList<>();
@@ -143,16 +144,14 @@ public class CommonUtils {
 		return MdmsCriteriaReq.builder().requestInfo(requestInfo).mdmsCriteria(mdmsCriteria).build();
 	}
 
-	/**************************
-	 * JSON MERGE UTILITY METHODS
-	 ****************************************/
+	/* JSON MERGE UTILITY METHODS */
 
 	/**
 	 * Method to merge additional details during update
 	 * 
-	 * @param mainNode
-	 * @param updateNode
-	 * @return
+	 * @param mainNode   base JSON node
+	 * @param updateNode JSON node containing updates
+	 * @return merged JSON node
 	 */
 	public JsonNode jsonMerge(JsonNode mainNode, JsonNode updateNode) {
 
@@ -166,15 +165,11 @@ public class CommonUtils {
 
 			String fieldName = fieldNames.next();
 			JsonNode jsonNode = mainNode.get(fieldName);
-			// if field exists and is an embedded object
 			if (jsonNode != null && jsonNode.isObject()) {
 				jsonMerge(jsonNode, updateNode.get(fieldName));
-			} else {
-				if (mainNode instanceof ObjectNode) {
-					// Overwrite field
-					JsonNode value = updateNode.get(fieldName);
-					((ObjectNode) mainNode).set(fieldName, value);
-				}
+			} else if (mainNode instanceof ObjectNode objectNode) {
+				JsonNode value = updateNode.get(fieldName);
+				objectNode.set(fieldName, value);
 			}
 
 		}
